--- a/assets/scss/shortcodes/_read_more.scss
+++ b/assets/scss/shortcodes/_read_more.scss
@@ -1,5 +1,4 @@
 .read_more_small {
-  height: 4.5em;
   overflow: hidden !important;
   // https://stackoverflow.com/questions/11837606/fading-out-text-at-bottom-of-a-section-with-transparent-div-but-height-stays-un/58740440
   -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
